apps/egress/google.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: google
spec:
  hosts:
    - www.google.co.jp
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  location: MESH_EXTERNAL
  resolution: DNS
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: inbound-google
spec:
  hosts:
    - www.google.co.jp
  http:
    - route:
        - destination:
            host: gateway-istio.egress.svc.cluster.local
            port:
              number: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: outbound-google
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - www.google.co.jp
  rules:
    - backendRefs:
        - kind: Hostname
          group: networking.istio.io
          name: www.google.co.jp
          port: 443
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: outbound-google
spec:
  host: www.google.co.jp
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    portLevelSettings:
      - port:
          number: 443
        tls:
          mode: SIMPLE
