apps/egress/internet.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: internet
spec:
  hosts:
    - yokaze.github.io
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: inbound-route
spec:
  parentRefs:
    - group: networking.istio.io
      kind: ServiceEntry
      name: internet
  rules:
    - backendRefs:
        - name: gateway-istio
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: outbound-route
spec:
  hostnames:
    - '*.io'
  parentRefs:
    - name: gateway
  rules:
    - backendRefs:
        - kind: Hostname
          group: networking.istio.io
          name: yokaze.github.io
          port: 443
