apps/egress/outbound-policy.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: outbound-io
spec:
  host: '*.io'
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 443
        tls:
          mode: SIMPLE
